--- a/static/description/index.html
+++ b/static/description/index.html
@@ -2,11 +2,8 @@
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan">Admission, The Way You Like It</h2>
-        <div class="oe_span6">
-            <p class="oe_mt32">
-Track your opportunities pipeline with the revolutionary kanban view. 
-            </p>
-        </div>
+		<h3 class="oe_slogan">Track your opportunities pipeline with the revolutionary kanban view. </h3>
+        
         <div class="oe_span6">
             <div class="oe_row_img oe_centered">
                 <img class="oe_picture oe_screenshot" src="add_sc_02.png">
